# music_ai_assistant

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  data_utils.py  docker-compose.yml  docker_commands.sh  llm_test.py  llm_utils.py  manage-services.sh  pyproject.toml  requirements.txt
code_execution_service/: Dockerfile  main.py  test_execution_service.sh  test_executuion_restricted.py  test_restricted_code.py
docs/: architecture.md  code_execution_service.md  data_utils.md  llm_service.md  llm_utils.md  streamlit_app.md
llm_service/: Dockerfile  main.py  test_code_generation.sh
